- Refactor: Change ProgramConclusion targetState slot to RegistrationStateTypeEnum

34.2.0 (31-08-2022)
- Bug Fix: Mark rules that prevent automatic group enrolment
- Bug Fix: Previous years rule verifier mode should test if rule applies to context 
- Refactor: Add log to previous years enrolment rule
- Refactor: Introduce RegistrationStateTypeEnum to ease conversion to entity

34.1.0 (24-08-2022)
- Improvement: Allow exclusiveness rule to be used in degrees without cycles
- Bug Fix: Annual curricular course should only be enroled in first period of year
- Bug Fix: Correctly evaluate previous years enrolment rule when execution year is not current 
- Refactor: Previous years enrolment rule code cleanup
- Refactor: Drop support for deprecated rule level (with temporary enrolments)
- Refactor: Unification of code from previous years enrolemnt rule

34.0.2 (12-08-2022)
- Improvement: Add support for activate/desactivate professional situation conditions
- Improvement: Diable profession type 'Other'

34.0.1 (20-07-2022)
- Bug Fix: Revert return of unmodifiable instance occupation intervals

34.0.0 (19-07-2022)
- Refactor: Clean unused legacy space occupation and space utils code  
- Refactor: Remove unused field canHaveCurriculumLinesOnCreation from RegistrationStateType
- Bug Fix: Fix bug which prevents the edition of RegistrationProtocol which is set by omission
- Bug Fix: Change references of non existing person renderers schema

33.1.0 (13-07-2022)
- Improvement: Add new profession types

33.0.1 (27-06-2022)
- Refactor: Change teacher authorizations slots visibility in order to allow edition

33.0.0 (17-06-2022)
- Bug Fix: Remove the personal ingression data when a student is deleted
- Refactor: Remove legacy resource allocation manager functionalities
- Refactor: Remove legacy directive council module
- Refactor: Remove legacy international relation office module
- Refactor: Remove legacy gep module